force-app/main/default/objects/Bus_Route__c/Bus_Route__c.object-meta.xml
<CustomObject>
    <label>Bus Route</label>
    <nameField>
        <label>Bus Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>