force-app/main/default/objects/Bus_Route__c/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <formula>(  HOUR( End_Time__c ) - HOUR(Start_Time__c)) *60 
+(  MINUTE( End_Time__c ) - MINUTE(Start_Time__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>