force-app/main/default/objects/Bus_Route__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End Time of the Route</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>