force-app/main/default/objects/Bus_Route__c/fields/Route_Description__c.field-meta.xml
<CustomField>
    <fullName>Route_Description__c</fullName>
    <label>Route Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>