force-app/main/default/objects/Bus_Route__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time of the Route</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>