force-app/main/default/objects/Bus_Route__c/fields/Total_Stops__c.field-meta.xml
<CustomField>
    <fullName>Total_Stops__c</fullName>
    <description>Calculates total number of bus stops in a route</description>
    <label>Total Stops</label>
    <summaryForeignKey>Bus_Stop__c.Bus_Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>