force-app/main/default/objects/Bus_Route__c/validationRules/End_Time_should_be_later_than_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_should_be_later_than_Start_Time</fullName>
    <active>true</active>
    <description>Bus Route End Time should always be later than Start Time.</description>
    <errorConditionFormula>Start_Time__c &gt;  End_Time__c</errorConditionFormula>
    <errorMessage>Start Time is later that End Time</errorMessage>
</ValidationRule>