force-app/main/default/objects/Bus_Route__c/validationRules/Format_for_Route_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_for_Route_Number</fullName>
    <active>true</active>
    <description>format with digit(s) left, one letter right (letter is optional).</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Route_Number__c  )),
 NOT(
  or(
   REGEX( Route_Number__c  , &quot;[0-9]&quot;),
   REGEX( Route_Number__c  , &quot;[0-9]{2}&quot;),
   REGEX( Route_Number__c  , &quot;[0-9]{3}&quot;),
   REGEX( Route_Number__c  , &quot;[0-9][A-Z]{1}&quot;),
   REGEX( Route_Number__c  , &quot;[0-9]{2}[A-Z]{1}&quot;),
   REGEX( Route_Number__c  , &quot;[0-9]{3}[A-Z]{1}&quot;) 
   )
 )
)</errorConditionFormula>
    <errorMessage>Route Number should be in format &apos;133&apos;, &apos;1A&apos;, &apos;21B&apos; etc. - with digit(s) left, one letter right (letter is optional).</errorMessage>
</ValidationRule>